# auto_car_ZUQP

./: .Xauthority  .bash_history  .bashrc  .python-history  .viminfo  README.md  nohup.out
PaddleLite/example/: ._0_feed_1_128_128_3.txt  ._0_feed_1_3_128_128.txt  ._10_fc_1_1_1_1.txt  ._1_conv_1_32_62_62.txt  ._2_conv_1_32_29_29.txt  ._3_conv_1_64_13_13.txt  ._4_conv_1_64_6_6.txt  ._5_conv_1_128_4_4.txt  ._cart.py  cart.py  score_map.txt
PaddleLite/example/cart/: ._params
PaddleLite/lib/: ._CMakeLists.txt  setup.py
PaddleLite/lib/include/: paddle_use_kernels.h  paddle_use_ops.h
PaddleLite/lib/paddlelite.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
PaddleLite/lib/src/: ._pybind.cc  ._pybind.h  pybind.cc
PaddleLite/lib/tests/: ._general.py
deepcar/deeplearning_python/cart_model/: ._model  __model__  params
deepcar/deeplearning_python/data/: data.npy  data.txt
deepcar/deeplearning_python/lib/: libpaddle-mobile.so_nodebug
deepcar/deeplearning_python/src/: Data_Coll.py
deepcar/pd/freeze_model/: conv2d_10.w_0
driver/: S20syslog  ch341.ko  ff-memless.ko  fpgadrv.ko  ftdi_sio.ko  hid-logitech.ko  joydev.ko  readme  usbserial.ko
paddle_mobile/examples/: ._api.py  ._edgeboard.py  api.py  edgeboard.py
paddle_mobile/paddlemobile/: ._setup.py  CMakeLists.txt  setup.py
paddle_mobile/paddlemobile/include/io/: ._paddle_inference_api.h
paddle_mobile/paddlemobile/lib/: readme.txt
paddle_mobile/paddlemobile/pybind11/tests/: ._test_buffers.cpp  ._test_buffers.py  ._test_numpy_array.cpp  ._test_numpy_dtypes.cpp
paddle_mobile/paddlemobile/src/: ._py_paddlebuf.cpp  ._py_paddlepredicator.cpp  ._py_paddletensor.cpp  ._pybind.cpp  ._pybind.h  py_enums.cpp  py_enums.h  py_paddlebuf.cpp  py_paddlebuf.h  py_paddlemobileconfig.cpp  py_paddlemobileconfig.h  py_paddlepredicator.cpp  py_paddlepredicator.h  py_paddletensor.cpp  py_paddletensor.h  pybind.cpp  pybind.h
paddle_mobile/paddlemobile/tests/: general.py
pip-packages/: urls.txt
pip-packages/Pillow-7.0.0/src/Pillow.egg-info/: PKG-INFO
sample/classification/: CMakeLists.txt  README.md
sample/classification/configs/Inceptionv2/: zebra.json
sample/classification/configs/Inceptionv3/: zebra.json
sample/classification/configs/mobilenetv1/: zebra.json
sample/classification/configs/resnet50/: .drink.json.un~  drink.json
sample/classification/models/Inceptionv2/: label_list.txt  model
sample/classification/models/Inceptionv3/: model
sample/classification/models/mobilenetv1/: __model__
sample/classification/src/: .video_classify.cpp.un~  image_classify.cpp  video_classify.cpp
sample/detection/: CMakeLists.txt  README.md
sample/detection/configs/mobilenet-ssd/: screw.json
sample/detection/configs/mobilenet-ssd-640/: screw.json
sample/detection/configs/vgg-ssd/: screw.json
sample/detection/include/io/: paddle_inference_api.h
sample/detection/lib/: libpaddle-mobile.so.1.3.0  ln.sh
sample/detection/models/mobilenet-ssd/: model
sample/detection/models/mobilenet-ssd-640/: model
sample/detection/models/vgg-ssd/: model
sample/detection/src/: camera.cpp  camera.hpp  image_detection.cpp  video_detection.cpp
tools/dp/: startx  stopx
tools/video/: v4l2demo
